e2e-testing/kuttl/multiple-services-scenarios/05-add-virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details-alt
  namespace: multiple-services-per-deployment
spec:
  hosts:
    - details-alt
  http:
    - route:
        - destination:
            host: details-alt
            subset: shared
...
