e2e-testing/kuttl/multiple-services-scenarios/05-restore-all-destination-rules.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: details
  namespace: multiple-services-per-deployment
spec:
  host: details
  subsets:
    - name: shared
      labels:
        version: shared
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: details-alt
  namespace: multiple-services-per-deployment
spec:
  host: details-alt
  subsets:
    - name: shared
      labels:
        version: shared
---
